--- a/css/profile.css
+++ b/css/profile.css
@@ -100,5 +100,5 @@
 }
 
 .profile-content-option:hover {
-    color: #e1b1e8;
+    color: black;
 }
